--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
+  <h1 id="title">Bateria 🥁 Virtual</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -21,11 +21,11 @@
     <button class="l drum">l</button>
   </div>
 
-    Made with ❤️ in London.
-  </footer>
-  <footer>
-    <script src="index.js" charset="utf-8"></script>
 
+  <footer>
+    Tu Dum Tss ❤️ 
+  </footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
